--- a/.gitignore
+++ b/.gitignore
@@ -200,6 +200,8 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+node_modules/
+.cursorrules
 
 # Marimo
 marimo/_static/
