chore: sync new assets, docs, and scripts; update pages & config

--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
+    "design:test": "node scripts/design-check.js",
+    "design:fix": "node scripts/design-fix.js && node scripts/design-check.js",
     "security:test": "node scripts/security-check.js",
     "seo:test": "node scripts/seo-check.js",
     "compliance:test": "node scripts/compliance-check.js",
     "compliance:fix": "node scripts/compliance-fix.js && node scripts/compliance-check.js",
     "gate:test": "node scripts/gate-check.js",
-    "test": "npm run security:test && npm run compliance:test && npm run gate:test && npm run seo:test"
+    "gate:fix": "node scripts/gate-fix.js && node scripts/gate-check.js",
+    "test": "npm run security:test && npm run compliance:test && npm run gate:test && npm run seo:test && npm run design:test"
   },
   "devDependencies": {
     "cheerio": "1.0.0-rc.12",
